remove anti-pattern with security issues